--- a/index.html
+++ b/index.html
@@ -5,26 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../HWweb/style.css">
+    <link rel="stylesheet" href="../HWweb/mobile_css.css">
 </head>
 <body>
     <div class="menu">
         <img class="menu_img" src="../HWweb/img/Logo (2).png" alt="logo">
         <div class="menu_but">
-            <button class="btn"><img class="but_menu1" src="../HWweb/img/Forma 1 (4).svg" alt="logo"></button>
-            <button class="btn"><img class="but_menu2" src="../HWweb/img/Forma 1 (3).svg" alt="logo"></button>
-            <button class="btn"><img class="but_menu3" src="../HWweb/img/Forma 1 (2).svg" alt="logo"></button>
+            <button class="btn1"><img class="but_menu1" src="../HWweb/img/Forma 1 (4).svg" alt="logo"></button>
+            <button class="btn2"><img class="but_menu2" src="../HWweb/img/Forma 1 (3).svg" alt="logo"></button>
+            <button class="btn3"><img class="but_menu3" src="../HWweb/img/Forma 1 (2).svg" alt="logo"></button>
         </div>
     </div>
     <div class="background">
         <img class="img_back1" src="../HWweb/img/Layer_57.png" alt="img">
         <img class="img_back2" src="../HWweb/img/Group 10.png" alt="img">
     </div>
-    <div class="img_block">
+
         <img class="women" src="../HWweb/img/1-for women .png" alt="women">
         <img class="men" src="../HWweb/img/2-for men .jpeg" alt="men">
         <img class="kid" src="../HWweb/img/3-for kids .png" alt="child">
         <img class="acces" src="../HWweb/img/4-ACCESORIES.png" alt="acces">
-    </div>
+
         
         <div class="all">
                 <div class="cards0">
