--- a/index.html
+++ b/index.html
@@ -12,6 +12,33 @@
         <img class="menu_img" src="../HWweb/img/Logo (2).png" alt="logo">
         <div class="menu_but">
             <button class="btn1"><img class="but_menu1" src="../HWweb/img/Forma 1 (4).svg" alt="logo"></button>
+            <div class="dropdown">
+            <li><a class="dropdown-item1" href="#">MENU</a></li>
+            <li><a class="dropdown-item" href="#">MAN</a></li>
+            <ul>
+                <li>Accesories</li>
+                <li>Bags</li>
+                <li>Denim</li>
+                <li>T-shirt</li>
+               </ul>
+            <li><a class="dropdown-item" href="#">MEN</a></li>
+            <ul>
+                <li>Accesories</li>
+                <li>Jackets & Coats</li>
+                <li>Polos</li>
+                <li>T-shirt</li>
+                <li>Shirts</li>
+               </ul>
+            <li><a class="dropdown-item" href="#">KIDS</a></li>
+            <ul>
+                <li>Accesories</li>
+                <li>Jackets & Coats</li>
+                <li>Polos</li>
+                <li>T-shirt</li>
+                <li>Shirts</li>
+                <li>Bags</li>
+               </ul>
+               </div>
             <button class="btn2"><img class="but_menu2" src="../HWweb/img/Forma 1 (3).svg" alt="logo"></button>
             <button class="btn3"><img class="but_menu3" src="../HWweb/img/Forma 1 (2).svg" alt="logo"></button>
         </div>
@@ -59,6 +86,19 @@
                 </div>
                 <button class="btn_all">Browse All Product</button>
             </div>
+        </div>
+        <div class="foot">
+            <img class="img_foot1" src="../HWweb/img/text_mini.png" alt="logo">
+            <img class="img_foot2" src="../HWweb/img/2.png" alt="logo">
+            <img class="img_foot3" src="../HWweb/img/3 (1).png" alt="logo">
+        </div>
+        <div class="down">
+            <img class="img_down1" src="../HWweb/img/subscribe info.png" alt="logo">
+            <img class="img_down2" src="../HWweb/img/Subscribe.png" alt="logo">
+        </div>
+        <div class="end">
+            <img class="img_end1" src="../HWweb/img/© 2022 Brand All Rights Reserved..png" alt="logo">
+            <img class="img_end2" src="../HWweb/img/Social Icon.png" alt="logo">
         </div>
 
 </body>
