--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
                 </div>
                 <div class="cards2">
                     <img class="pr_img2" src="../HWweb/img/Image (1).png" alt="women">
+                    <img class="pr_img2_hover" src="../HWweb/img/HoverShop.png" alt="hover">
                     <img class="pr_title2" src="../HWweb/img/Title and price.png" alt="price">
                 </div>
                 <div class="cards3">
@@ -91,6 +92,19 @@
             <img class="img_foot1" src="../HWweb/img/text_mini.png" alt="logo">
             <img class="img_foot2" src="../HWweb/img/2.png" alt="logo">
             <img class="img_foot3" src="../HWweb/img/3 (1).png" alt="logo">
+        </div>
+        <div class="card-none">
+            <h2 class="h2_none">Cart Items</h2>
+            <div class="card_none1">
+                <img src="../HWweb/img/men1.jpeg" alt="photo">
+                <img class="img_none1" src="../HWweb/img/price1.png" alt="price">
+                <img class="img_close1" src="../HWweb/img/close.png" alt="close">
+            </div>
+            <div class="card_none2">
+                <img src="../HWweb/img/men2.jpeg" alt="photo">
+                <img class="img_none2" src="../HWweb/img/price2.png" alt="price">
+                <img class="img_close2" src="../HWweb/img/close.png" alt="close">
+            </div>
         </div>
         <div class="down">
             <img class="img_down1" src="../HWweb/img/subscribe info.png" alt="logo">
